<resources>
    <string name="app_name">Random Number Generator</string>
    <string name="button_text">Roll</string>
    <string name="number_text">0</string>
    <string name="number_length">1</string>
    <string name="start_button_text">Start</string>
    <string name="stop_button_text">Stop</string>
    <string name="timer_text">Time until stop: %1$s</string>
    <string name="checkbox_text">Use timer</string>
    <string name="digit_text_view_text">Number of digits:</string>
    <string name="timer_edit_text">30</string>
    <string name="timer_length_text">Timer length:</string>
    <string name="range_checkbox_text">Use range</string>
    <string name="min_num_roll_text">0</string>
    <string name="max_num_roll_text">10</string>
    <string name="min_text">min</string>
    <string name="max_text">max</string>
</resources>