<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/number_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_text"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/timer_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timer_text"
        android:textSize="25sp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/number_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/digit_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/digit_text_view_text"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/roll_button"
        app:layout_constraintEnd_toStartOf="@+id/number_length"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number_text_view" />

    <TextView
        android:id="@+id/timer_length_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timer_length_text"
        android:textSize="14sp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/number_text_view"
        app:layout_constraintEnd_toStartOf="@+id/timer_edit_text"
        app:layout_constraintHorizontal_bias="0.73"
        app:layout_constraintStart_toStartOf="@+id/timer_text_view"
        app:layout_constraintTop_toBottomOf="@+id/timer_text_view" />

    <EditText
        android:id="@+id/number_length"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:inputType="number"
        android:text="@string/number_length"
        android:background="@null"
        app:layout_constraintBottom_toTopOf="@+id/roll_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number_text_view" />

    <EditText
        android:id="@+id/timer_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:inputType="number"
        android:background="@null"
        android:text="@string/timer_edit_text"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/number_text_view"
        app:layout_constraintEnd_toEndOf="@+id/timer_text_view"
        app:layout_constraintHorizontal_bias="0.69"
        app:layout_constraintStart_toStartOf="@+id/timer_text_view"
        app:layout_constraintTop_toBottomOf="@+id/timer_text_view" />

    <Button
        android:id="@+id/roll_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number_text_view" />

    <Button
        android:id="@+id/start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_button_text"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/roll_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number_text_view" />

    <Button
        android:id="@+id/stop_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop_button_text"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/roll_button"
        app:layout_constraintTop_toBottomOf="@+id/number_text_view" />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onCheckboxClicked"
        android:text="@string/checkbox_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/roll_button" />

</androidx.constraintlayout.widget.ConstraintLayout>